--- a/client/bower.json
+++ b/client/bower.json
@@ -19,6 +19,7 @@
     "lodash": "~4.15.0",
     "angular-route": "~1.5.8",
     "bootstrap-theme-bootswatch-flatly": "~1.0.2",
-    "font-awesome": "^4.6.3"
+    "font-awesome": "^4.6.3",
+    "angular-7segments": "^0.2.0"
   }
 }
