--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "prestart": "npm install",
+    "postinstall": "cd client && ../node_modules/bower/bin/bower install",
     "start": "node index.js",
     "test": "npm run test-unit",
     "test-unit": "NODE_ENV=test mocha --require co-mocha '**.spec.js'"
