--- a/client/bower.json
+++ b/client/bower.json
@@ -14,12 +14,13 @@
     "tests"
   ],
   "dependencies": {
-    "socket.io": "~1.4.8",
-    "angular-socket-io": "~0.7.0",
-    "lodash": "~4.15.0",
-    "angular-route": "~1.5.8",
-    "bootstrap-theme-bootswatch-flatly": "~1.0.2",
-    "font-awesome": "^4.6.3",
-    "angular-7segments": "^0.2.0"
+    "socket.io": "1.4.8",
+    "angular-socket-io": "0.7.0",
+    "lodash": "4.15.0",
+    "angular": "1.5.8",
+    "angular-route": "1.5.8",
+    "bootstrap-theme-bootswatch-flatly": "1.0.2",
+    "font-awesome": "4.6.3",
+    "angular-7segments": "0.2.0"
   }
 }
