--- a/package.json
+++ b/package.json
@@ -11,10 +11,10 @@
     "test-unit": "NODE_ENV=test mocha --require co-mocha '**.spec.js'"
   },
   "dependencies": {
-    "bower": "^1.7.9",
-    "express": "^4.14",
-    "serve-static": "^1.11.1",
-    "socket.io": "^1.4.8"
+    "bower": "1.7.9",
+    "express": "4.14",
+    "serve-static": "1.11.1",
+    "socket.io": "1.4.8"
   },
   "devDependencies": {
     "chai": "^3.5.0",
