--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "bower": "1.7.9",
     "express": "4.14",
+    "lodash": "^4.16.4",
     "serve-static": "1.11.1",
     "socket.io": "1.4.8"
   },
