--- a/client/bower.json
+++ b/client/bower.json
@@ -19,11 +19,11 @@
     "angular-socket-io": "0.7.0",
     "lodash": "4.15.0",
     "angular-route": "1.5.8",
-    "bootstrap-theme-bootswatch-flatly": "1.0.2",
     "font-awesome": "4.6.3",
-    "angular-7segments": "0.2.0"
+    "angular-7segments": "0.2.0",
+    "bootswatch": "^3.3.7"
   },
   "resolutions": {
-      "angular": "1.5.8"
+    "angular": "1.5.8"
   }
 }
